Working API call and display currency exchange

--- a/index.html
+++ b/index.html
@@ -68,7 +68,17 @@
 
             <div class="column" id="Info">
 
+                <div id="mxn">
 
+                </div>
+
+                <div id="usd">
+
+                </div>
+
+                <div id="eur">
+                    
+                </div>
 
 
             </div>
